--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,18 +1,41 @@
 <h2>Create an Author</h2>
-<%= form_tag authors_path, method: "post" do %>
-  <div class="field">
+<%= form_tag authors_path do %>
+<% if @author.errors.any?%>
+  <div id="error_explanation">
+    <h2>There were some errors:</h2>
+      <ul>
+        <%@author.errors.full_messages.each do |message|%>
+          <li><%= message%></li>
+        <%end%>
+      </ul>
+  </div>
+<%end%>
+
+<%if @author.errors[:name].any?%>
+  <div class="field_with_errors">
+<%else%>
+  <div class="field"  >
+<% end %>
     <%= label_tag "name", "Name" %>
-    <%= text_field_tag "name" %>
+    <%= text_field_tag "name", @author.name %>
   </div>
 
-  <div class="field">
+<%if @author.errors[:email].any?%>
+  <div class="field_with_errors">
+<%else%>
+  <div class="field"  >
+<% end %>
     <%= label_tag "email", "Email" %>
-    <%= text_field_tag "email" %>
+    <%= text_field_tag "email", @author.email %>
   </div>
 
-  <div class="field">
-    <%= label_tag "phone_number", "Phone Number" %>
-    <%= text_field_tag "phone_number" %>
+<%if @author.errors[:phone_number].any?%>
+  <div class="field_with_errors">
+<%else%>
+  <div class="field"  >
+<% end %>
+      <%= label_tag "phone_number", "Phone Number" %>
+    <%= text_field_tag "phone_number", @author.phone_number %>
   </div>
 
   <%= submit_tag "Create" %>
